--- a/codes/rust/Cargo.toml
+++ b/codes/rust/Cargo.toml
@@ -254,5 +254,10 @@ path = "chapter_dynamic_programming/knapsack.rs"
 name = "min_path_sum"
 path = "chapter_dynamic_programming/min_path_sum.rs"
 
+# Run Command: cargo run --bin edit_distance
+[[bin]]
+name = "edit_distance"
+path = "chapter_dynamic_programming/edit_distance.rs"
+
 [dependencies]
 rand = "0.8.5"
