Update the summary of the chapter DP.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -209,7 +209,7 @@ nav:
     - chapter_backtracking/index.md
     - 12.1. &nbsp; 回溯算法: chapter_backtracking/backtracking_algorithm.md
     - 12.2. &nbsp; 全排列问题: chapter_backtracking/permutations_problem.md
-    - 12.3. &nbsp; 子集和问题（New）: chapter_backtracking/subset_sum_problem.md
+    - 12.3. &nbsp; 子集和问题: chapter_backtracking/subset_sum_problem.md
     - 12.4. &nbsp; N 皇后问题: chapter_backtracking/n_queens_problem.md
     - 12.5. &nbsp; 小结: chapter_backtracking/summary.md
   - 13. &nbsp; &nbsp; 动态规划:
@@ -220,6 +220,7 @@ nav:
     - 13.4. &nbsp; 0-1 背包问题（New）: chapter_dynamic_programming/knapsack_problem.md
     - 13.5. &nbsp; 完全背包问题（New）: chapter_dynamic_programming/unbounded_knapsack_problem.md
     - 13.6. &nbsp; 编辑距离问题（New）: chapter_dynamic_programming/edit_distance_problem.md
+    - 13.7. &nbsp; 小结（New）: chapter_dynamic_programming/summary.md
   - 14. &nbsp; &nbsp; 附录:
     - 14.1. &nbsp; 编程环境安装: chapter_appendix/installation.md
     - 14.2. &nbsp; 一起参与创作: chapter_appendix/contribution.md
