--- a/codes/rust/Cargo.toml
+++ b/codes/rust/Cargo.toml
@@ -249,5 +249,35 @@ path = "chapter_graph/graph_bfs.rs"
 name = "graph_dfs"
 path = "chapter_graph/graph_dfs.rs"
 
+# Run Command: cargo run --bin coin_change
+[[bin]]
+name = "coin_change"
+path = "chapter_dynamic_programming/coin_change.rs"
+
+# Run Command: cargo run --bin coin_change_ii
+[[bin]]
+name = "coin_change_ii"
+path = "chapter_dynamic_programming/coin_change_ii.rs"
+
+# Run Command: cargo run --bin unbounded_knapsack
+[[bin]]
+name = "unbounded_knapsack"
+path = "chapter_dynamic_programming/unbounded_knapsack.rs"
+
+# Run Command: cargo run --bin knapsack
+[[bin]]
+name = "knapsack"
+path = "chapter_dynamic_programming/knapsack.rs"
+
+# Run Command: cargo run --bin min_path_sum
+[[bin]]
+name = "min_path_sum"
+path = "chapter_dynamic_programming/min_path_sum.rs"
+
+# Run Command: cargo run --bin edit_distance
+[[bin]]
+name = "edit_distance"
+path = "chapter_dynamic_programming/edit_distance.rs"
+
 [dependencies]
 rand = "0.8.5"
