feat: add rust codes for chapter heap (#612)
Co-authored-by: Yudong Jin <krahets@163.com>

--- a/codes/rust/Cargo.toml
+++ b/codes/rust/Cargo.toml
@@ -179,6 +179,41 @@ path = "chapter_tree/binary_tree_dfs.rs"
 name = "binary_tree"
 path = "chapter_tree/binary_tree.rs"
 
+# Run Command: cargo run --bin heap
+[[bin]]
+name = "heap"
+path = "chapter_heap/heap.rs"
+
+# Run Command: cargo run --bin my_heap
+[[bin]]
+name = "my_heap"
+path = "chapter_heap/my_heap.rs"
+
+# Run Command: cargo run --bin top_k
+[[bin]]
+name = "top_k"
+path = "chapter_heap/top_k.rs"
+
+# Run Command: cargo run --bin graph_adjacency_list
+[[bin]]
+name = "graph_adjacency_list"
+path = "chapter_graph/graph_adjacency_list.rs"
+
+# Run Command: cargo run --bin graph_adjacency_matrix
+[[bin]]
+name = "graph_adjacency_matrix"
+path = "chapter_graph/graph_adjacency_matrix.rs"
+
+# Run Command: cargo run --bin graph_bfs
+[[bin]]
+name = "graph_bfs"
+path = "chapter_graph/graph_bfs.rs"
+
+# Run Command: cargo run --bin graph_dfs
+[[bin]]
+name = "graph_dfs"
+path = "chapter_graph/graph_dfs.rs"
+
 # Run Command: cargo run --bin linear_search
 [[bin]]
 name = "linear_search"
@@ -233,26 +268,6 @@ path = "chapter_backtracking/subset_sum_i.rs"
 [[bin]]
 name = "subset_sum_ii"
 path = "chapter_backtracking/subset_sum_ii.rs"
-
-# Run Command: cargo run --bin graph_adjacency_list
-[[bin]]
-name = "graph_adjacency_list"
-path = "chapter_graph/graph_adjacency_list.rs"
-
-# Run Command: cargo run --bin graph_adjacency_matrix
-[[bin]]
-name = "graph_adjacency_matrix"
-path = "chapter_graph/graph_adjacency_matrix.rs"
-
-# Run Command: cargo run --bin graph_bfs
-[[bin]]
-name = "graph_bfs"
-path = "chapter_graph/graph_bfs.rs"
-
-# Run Command: cargo run --bin graph_dfs
-[[bin]]
-name = "graph_dfs"
-path = "chapter_graph/graph_dfs.rs"
 
 # Run Command: cargo run --bin coin_change
 [[bin]]
