--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -208,7 +208,8 @@ nav:
   - 12. &nbsp; &nbsp; 分治:
     - chapter_divide_and_conquer/index.md
     - 12.1. &nbsp; 分治算法（New）: chapter_divide_and_conquer/divide_and_conquer.md
-    - 12.2. &nbsp; 构建树问题（New）: chapter_divide_and_conquer/build_binary_tree.md
+    - 12.2. &nbsp; 构建树问题（New）: chapter_divide_and_conquer/build_binary_tree_problem.md
+    - 12.3. &nbsp; 汉诺塔问题（New）: chapter_divide_and_conquer/hanota_problem.md
   - 13. &nbsp; &nbsp; 回溯:
     - chapter_backtracking/index.md
     - 13.1. &nbsp; 回溯算法: chapter_backtracking/backtracking_algorithm.md
