Add Java and C++ code for the chapter of divide and conquer.

--- a/codes/cpp/CMakeLists.txt
+++ b/codes/cpp/CMakeLists.txt
@@ -12,7 +12,8 @@ add_subdirectory(chapter_hashing)
 add_subdirectory(chapter_tree)
 add_subdirectory(chapter_heap)
 add_subdirectory(chapter_graph)
-add_subdirectory(chapter_sorting)
 add_subdirectory(chapter_searching)
+add_subdirectory(chapter_sorting)
+add_subdirectory(chapter_divide_and_conquer)
 add_subdirectory(chapter_backtracking)
 add_subdirectory(chapter_dynamic_programming)
