Add the chapter of greedy. Add the section of fractional knapsack.

--- a/codes/cpp/CMakeLists.txt
+++ b/codes/cpp/CMakeLists.txt
@@ -17,3 +17,4 @@ add_subdirectory(chapter_sorting)
 add_subdirectory(chapter_divide_and_conquer)
 add_subdirectory(chapter_backtracking)
 add_subdirectory(chapter_dynamic_programming)
+add_subdirectory(chapter_greedy)
