--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -269,6 +269,8 @@ nav:
     - 15.1. &nbsp; 贪心算法: chapter_greedy/greedy_algorithm.md
     # [status: new]
     - 15.2. &nbsp; 分数背包问题: chapter_greedy/fractional_knapsack_problem.md
+    # [status: new]
+    - 15.3. &nbsp; 最大容量问题: chapter_greedy/max_capacity_problem.md
   - 16. &nbsp; 附录:
     # [icon: material/help-circle-outline]
     - chapter_appendix/index.md
