--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -273,6 +273,8 @@ nav:
     - 15.3. &nbsp; 最大容量问题: chapter_greedy/max_capacity_problem.md
     # [status: new]
     - 15.4. &nbsp; 最大切分乘积问题: chapter_greedy/max_product_cutting_problem.md
+    # [status: new]
+    - 15.5. &nbsp; 小结: chapter_greedy/summary.md
   - 16. &nbsp; 附录:
     # [icon: material/help-circle-outline]
     - chapter_appendix/index.md
