feat: add rust codes for chapter greedy

--- a/codes/rust/Cargo.toml
+++ b/codes/rust/Cargo.toml
@@ -349,5 +349,25 @@ path = "chapter_divide_and_conquer/hanota.rs"
 name = "build_tree"
 path = "chapter_divide_and_conquer/build_tree.rs"
 
+# Run Command: cargo run --bin coin_change_greedy
+[[bin]]
+name = "coin_change_greedy"
+path = "chapter_greedy/coin_change_greedy.rs"
+
+# Run Command: cargo run --bin fractional_knapsack
+[[bin]]
+name = "fractional_knapsack"
+path = "chapter_greedy/fractional_knapsack.rs"
+
+# Run Command: cargo run --bin max_capacity
+[[bin]]
+name = "max_capacity"
+path = "chapter_greedy/max_capacity.rs"
+
+# Run Command: cargo run --bin max_product_cutting
+[[bin]]
+name = "max_product_cutting"
+path = "chapter_greedy/max_product_cutting.rs"
+
 [dependencies]
 rand = "0.8.5"
