--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -144,7 +144,7 @@ nav:
     - 1.1 &nbsp; 算法无处不在: chapter_introduction/algorithms_are_everywhere.md
     - 1.2 &nbsp; 算法是什么: chapter_introduction/what_is_dsa.md
     - 1.3 &nbsp; 小结: chapter_introduction/summary.md
-  - 第 2 章 &nbsp; 复杂度:
+  - 第 2 章 &nbsp; 时空复杂度:
     # [icon: material/timer-sand]
     - chapter_computational_complexity/index.md
     - 2.1 &nbsp; 算法效率评估: chapter_computational_complexity/performance_evaluation.md
@@ -173,7 +173,7 @@ nav:
     - 5.2 &nbsp; 队列: chapter_stack_and_queue/queue.md
     - 5.3 &nbsp; 双向队列: chapter_stack_and_queue/deque.md
     - 5.4 &nbsp; 小结: chapter_stack_and_queue/summary.md
-  - 第 6 章 &nbsp; 散列表:
+  - 第 6 章 &nbsp; 哈希表:
     # [icon: material/table-search]
     - chapter_hashing/index.md
     - 6.1 &nbsp; 哈希表: chapter_hashing/hash_map.md
