Update iteration code.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -148,6 +148,7 @@ nav:
     # [icon: material/timer-sand]
     - chapter_computational_complexity/index.md
     - 2.1 &nbsp; 算法效率评估: chapter_computational_complexity/performance_evaluation.md
+    # [status: new]
     - 2.2 &nbsp; 迭代与递归: chapter_computational_complexity/iteration_and_recursion.md
     - 2.3 &nbsp; 时间复杂度: chapter_computational_complexity/time_complexity.md
     - 2.4 &nbsp; 空间复杂度: chapter_computational_complexity/space_complexity.md
