--- a/.gitattributes
+++ b/.gitattributes
@@ -1,17 +1,18 @@
-*.java linguist-language=Java
 *.py linguist-language=Python
 *.cpp linguist-language=C++
 *.hpp linguist-language=C++
+*.java linguist-language=Java
 *.go linguist-language=Go
-*.js linguist-language=JavaScript
-*.ts linguist-language=TypeScript
 *.swift linguist-language=Swift
+*.js linguist-language=JavaScript
 
 *.c linguist-language=Other
 *.h linguist-language=Other
 *.cs linguist-language=Other
 *.zig linguist-language=Other
 *.rs linguist-language=Other
+*.ts linguist-language=Other
 *.dart linguist-language=Other
+
 *.html linguist-detectable=false
 *.css linguist-detectable=false
