--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,8 @@
 
 # test script
 test.sh
+
+# overrides
+docs/overrides/partials/*
+!docs/overrides/partials/content.html
+!docs/overrides/partials/footer.html
