--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -59,8 +59,8 @@ theme:
   font:
     text: Noto Sans SC
     code: Fira Code
-  favicon: assets/favicon.png
-  logo: assets/logo.png
+  favicon: assets/images/favicon.png
+  logo: assets/images/logo.png
   icon:
     logo: logo
     repo: fontawesome/brands/github
