--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -36,6 +36,6 @@ jobs:
       - name: Lint with black
         run: |
           black codes/python
-      - name: Build with py_compile
+      - name: Test python code
         run: |
-          python codes/python/build.py
+          python codes/python/test_all.py
