--- a/codes/docker-compose.yml
+++ b/codes/docker-compose.yml
@@ -1,7 +1,10 @@
 version: '3.8'
 services:
   hello-algo-code:
-    build: .
+    build:
+      context: .
+      args:
+        LANGS: ${LANGS_SDK}
     image: hello-algo-code
     container_name: hello-algo-code
     stdin_open: true
